// Mini IELTS Speaking — database schema
// View/edit at https://dbdiagram.io

Project mini_ielts_speaking {
  database_type: 'SQLite'
  Note: 'Laravel 13 API + Vue 3 dashboard for IELTS Speaking practice with Gemini-powered evaluation.'
}

Table users {
  id                bigint [pk, increment]
  name              varchar(255) [not null]
  email             varchar(255) [not null, unique]
  email_verified_at timestamp
  password          varchar(255) [not null]
  remember_token    varchar(100)
  created_at        timestamp
  updated_at        timestamp

  Note: 'Laravel default users table. Auth is optional (FR-7); attempts may have user_id = NULL.'
}

Table speaking_questions {
  id         bigint [pk, increment]
  part       varchar(10) [not null, note: 'part1, part2, or part3']
  topic      varchar(150) [not null]
  prompt     text [not null]
  created_at timestamp
  updated_at timestamp
}

Table speaking_attempts {
  id          bigint [pk, increment]
  user_id     bigint
  question_id bigint [not null]
  answer_text text [not null]
  status      varchar(10) [not null, default: 'pending', note: 'pending, evaluated, or failed']
  created_at  timestamp
  updated_at  timestamp

  indexes {
    user_id
    question_id
    status
  }

  Note: 'One row per submitted answer. user_id is nullable when auth is disabled. Status always reflects the real evaluation outcome.'
}

Table speaking_feedbacks {
  id               bigint [pk, increment]
  attempt_id       bigint [not null, unique]
  band_score       decimal(2,1) [not null, note: '0.0–9.0 in 0.5 steps']
  strengths        json [not null, note: 'array of strings']
  areas_to_improve json [not null, note: 'array of strings']
  raw_response     json
  created_at       timestamp
  updated_at       timestamp

  Note: 'Exactly one feedback per attempt, enforced by the unique constraint on attempt_id.'
}

// Foreign keys
Ref: speaking_attempts.user_id > users.id
Ref: speaking_attempts.question_id > speaking_questions.id
Ref: speaking_feedbacks.attempt_id - speaking_attempts.id